<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3px" >

        <Button
            android:id="@+id/expandButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" + " />

        <TextView
            android:id="@+id/jokeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_joke" />
        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_joke" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/ratingRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
         >

        <RadioButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_menuitem"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="36dp"
            android:layout_height="match_parent" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/dislikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dislike_menuitem" />
    </RadioGroup>

</LinearLayout>